Fixed overflowed collab list with counter for objkt page

--- a/src/components/User/CollabBadge.module.scss
+++ b/src/components/User/CollabBadge.module.scss
@@ -1,6 +1,29 @@
 @import "../../styles/Variables";
 
 .root {
+  padding-bottom: 20px;
+  @media (max-width: $breakpoint-sm) {
+    padding-bottom: 10px;
+  }
+  
+  .overflow_counter {
+    transition: all 0.3s;
+    display: flex;
+    margin-left: -25px !important;
+    margin-right: 10px;
+    word-break: keep-all;
+    padding: 5px 0 5px 6px;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  .avatars_list {
+    transition: all 0.3s;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
   .avatars {
     display: flex;
     flex-direction: row;
@@ -17,12 +40,6 @@
       .link {
         color: var(--color-black);
       }
-    }
-
-    .overflow_counter {
-      display: flex;
-      margin-left: 25px;
-      word-break: keep-all;
     }
 
     .avatar_wrapper {
@@ -65,8 +82,18 @@
 
   &.opened {
     .avatars {
-      .avatar_wrapper:not(:first-child) {
+      .overflow_counter {
+        margin-right: -15px;
+      }
+      .avatars_list {
+        margin-left: 50px;
+      }
+      .avatar_wrapper {
         margin-left: -50px;
+
+        &.link {
+          margin-left: -75px;
+        }
       }
     }
   }
@@ -76,19 +103,17 @@
     flex-direction: column;
     gap: 4px;
     font-size: var(--font-size-small);
-    margin-top: 0;
+    margin-top: -20px;
     margin-left: 3px;
     transition: all 0.3s;
     pointer-events: none;
     position: relative;
     align-items: flex-start;
+
     .collaborator {
       margin-top: -40px;
       opacity: 0;
       transition: all 0.3s ease-out;
-      @media (max-width: $breakpoint-sm) {
-        margin-top: -50px;
-      }
     }
   }
 
@@ -163,15 +188,17 @@
   // size related stuff
   //
   &.size_regular {
+    align-items: flex-start !important;
+    
     .avatars {
+      margin-left: 20px;
+
       .avatar {
-        border-width: 2px;
+        border-width: 2px;  
       }
 
       .avatar_wrapper {
-        &:not(:first-child) {
-          margin-left: -20px;
-        }
+        margin-left: -20px;
       }
 
       .link {
@@ -185,9 +212,21 @@
 
     &.opened {
       .avatars {
-        .avatar_wrapper:not(:first-child) {
-          margin-left: -37px;
+
+        .overflow_counter {
+          margin-right: -15px;
         }
+        .avatars_list {
+          margin-left: 37px;
+        }
+        .avatar_wrapper {
+          margin-left: -37px;
+  
+          &.link {
+            margin-left: -75px;
+          }
+        }
+
       }
     }
   }
@@ -199,9 +238,7 @@
       }
 
       .avatar_wrapper {
-        &:not(:first-child) {
-          margin-left: -10px;
-        }
+        margin-left: -10px;
       }
 
       .link {
@@ -215,7 +252,7 @@
 
     &.opened {
       .avatars {
-        .avatar_wrapper:not(:first-child) {
+        .avatar_wrapper {
           margin-left: -37px;
         }
       }
@@ -231,11 +268,8 @@
 
       .avatar_wrapper {
         flex-direction: row-reverse;
-
-        &:not(:first-child) {
-          margin-left: 0;
-          margin-right: -20px;
-        }
+        margin-left: 0;
+        margin-right: -20px;
 
         &:not(.link):hover {
           .user_name {
